--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [project]
-name = "discord-work"
+name = "ptacik"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
     "asyncpg>=0.30.0",
+    "colorama>=0.4.6",
     "discord>=2.3.2",
     "discord-py>=2.6.3",
     "dotenv>=0.9.9",
