--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -1,17 +1,43 @@
 name: Ruff Auto Fix
 on: [push]
 
+permissions:
+  contents: write
+
 jobs:
   ruff:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0   # needed if you want to push back
+
       - uses: astral-sh/ruff-action@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: ruff-action
+      - name: ruff check 
         run: ruff check --fix
       
       - name: ruff format
         run: ruff format
+
+      - name: configure git
+        run: |
+          git config user.name "github-actions"
+          git config usesr.email "github-actions@github.com"
+
+      - name: Set remote to HTTPS
+        run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+
+      - name: commit and push
+        run: |
+          git add .
+          if ! git diff --cached --quiet; then
+            git commit -m "Ruff linter"
+            git push origin HEAD
+          else
+            echo "No changes to commit"
+          fi
