--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: configure git
         run: |
-          git config user.name "github-actions"
-          git config usesr.email "github-actions@github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Set remote to HTTPS
         run: |
