--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -15,13 +15,10 @@ jobs:
 
       - uses: astral-sh/ruff-action@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: ruff check 
-        run: ruff check --fix
-      
-      - name: ruff format
-        run: ruff format
+          args: |
+            check --fix
+            format
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: configure git
         run: |
