--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "humanfriendly>=10.0",
     "pydantic>=2.11.10",
     "pydantic-settings>=2.11.0",
+    "pytz>=2025.2",
     "sqlalchemy>=2.0.43",
 ]
 
