--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,9 +18,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build image
-        run: |
-          docker compose build
-          docker tag ptacik slashdekomori/ptacik:latest
+        run: docker compose build
 
       - name: Push image
-        run: docker push slashdekomori/ptacik:latest
+        run: docker push 
