--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,4 +21,4 @@ jobs:
         run: docker compose build
 
       - name: Push image
-        run: docker push 
+        run: docker push slashdekomori/ptacik:latest
