--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   ptacik:
-    build: . 
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: ptacik 
     restart: unless-stopped
     env_file:
