--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: install ssh keys
         run: |
           install -m 600 -D /dev/null ~/.ssh/id_rsa
-          ssh-keychain -h ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+          ssh-keyscan -h ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
 
       - name: connect and pull
         run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} docker compose pull ptacik && docker compose up -d --no-deps --remove-orphans ptacik"
