getting ready to pull build run workflow

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
-DB_HOST = # IP 
-DB_PORT = 
-DB_NAME = 
-DB_USER = 
-DB_PASS =  
-TOKEN = # discord bot token 
+## Database Settings ##
+POSTGRES_DQ=
+POSTGRES_USER=
+POSTGRES_PASSWORD=strong_password
+
+## Bot settings ##
+DB_HOST=db
+DB_PORT=5432
+DB_NAME=ptacik
+DB_USER=${POSTGRES_USER}
+DB_PASS=${POSTGRES_PASSWORD}
+
+TOKEN=your discord token
+GUILD_ID=guild id
+ 
