Fix indentation in Ruff GitHub Actions workflow

--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -9,14 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Run Ruff lint
-      - uses: astral-sh/ruff-action@v3
+        uses: astral-sh/ruff-action@v3
         with:
-          args: check 
+          args: check
 
       - name: Check Ruff formatting
-      - uses: astral-sh/ruff-action@v3
+        uses: astral-sh/ruff-action@v3
         with:
           args: format --check
